--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.9",
     "axios-mock-adapter": "^2.1.0",
     "express": "^4.21.1",
