--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
+    "react-tooltip": "^5.28.0",
     "vite-plugin-api-routes": "^1.1.12"
   },
   "devDependencies": {
