Fix backend, more styling, added more data to tables

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios-mock-adapter": "^2.1.0",
     "express": "^4.21.1",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-tooltip": "^5.28.0",
@@ -32,6 +34,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.6",
     "@types/react": "^18.3.12",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
